# project-graph

./: .gitignore  ai_config_plan.md  auto-merge-conflicts.sh  direct_resolve.py  eslint.config.js  force_resolve.py  mcp_server_plan.md  openai_migration_plan.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  project-graph-json-spec.md  smart_merge.py
.cursor/rules/: project-structure.mdc
.github/: FUNDING.yml  copilot-instructions.md
.github/scripts/: enable-sourcemap.mjs  generate-pkgbuild.mjs
.github/workflows/: build_and_upload.yml  nightly.yml  publish.yml  release.yml
.trae/rules/: project_background.md
.zed/: settings.json
app/: .keys  .keys.pub  .roomodes  README.md  eslint.config.js  index.html  mcp_server_development_guide.md  package.json  pre_build.sh  splash.html  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
app/.tauri/: neko.jks  neko.key.pub
app/docs/: ANTHROPIC_SDK_USAGE.md  BACKEND_GUIDE.md  CORE_LOGIC_GUIDE.md  FRONTEND_GUIDE.md  GOOGLE_AI_SDK_USAGE.md  OPENAI_SDK_USAGE.md  README.md  (+1 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/src/: ai.rs  lib.rs  plugin_host.rs
app/src-tauri/src/ai/: types.rs
app/src-tauri/src/android_permissions/: code_analyzer.rs  manifest_parser.rs  mod.rs
app/src-tauri/src/cmd/: device.rs  fs.rs  mod.rs
docs/: package.json
docs-pg/: ProjectGraph开发进程图.prg  ProjectGraph项目架构.json  服务器.prg
patches/: typescript.patch
src-tauri/: tauri.conf.json
utils/: add-ts-nocheck.ts  lines.sh
(+432 files in other folders)
